--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Redraw the States</title>
+    <title>Redraw the States - More!</title>
     <meta charset="utf-8" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@khayeswilson" />
@@ -71,6 +71,7 @@
             <label class="col-sm-6 control-label" for="selectYear">Year:</label>
             <div class="col-sm-6">
             <select class="form-control" id="selectYear">
+              <option value="2000">2000</option>
               <option value="2004">2004</option>
               <option value="2008">2008</option>
               <option value="2012">2012</option>
