--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <p class="instructions" id="lede">How few counties can you move to make Hillary Clinton win the 2016 election?</p>
           <p class="instructions">Choose a county (or several) to move to a new state. Then click the <b>Move</b> button and the state you want to move your counties to.</p>
           <p class="instructions">We'll automatically recompute the number of electoral votes the state would get with their new counties, and update the electoral vote. However, we don't account for Maine and Nebraska's splitting of votes by congressional district.</p>
-          <p class="instructions">Weep at <a href="https://medium.com/@khayeswilson/clinton-would-have-won-if-the-united-states-looked-like-this-7b9c844b76a9">how arbitrary our electoral system is<a/>.</p>
+          <p class="instructions">Check out Kevin Wilson's <a href="https://medium.com/@khayeswilson/clinton-would-have-won-if-the-united-states-looked-like-this-7b9c844b76a9">original project<a/>.</p>
         </div>
       </div>
       <div class="row">
@@ -105,17 +105,14 @@
       </table>
     </div>
   </div>
-  <!--
+  
   <div class="row">
     <div class="col-sm-12">
-      Code available on <a href="https://github.com/khwilson/RedrawStates">GitHub</a>.
-      County election data compiled by <a href="http://townhall.com">Townhall</a>.
-      More acknowledgments available on GitHub.
-      Note that I'm not updating data constantly, so it is probably quite outdated by the time you see it.
-      Copyright 2016 <a href="http://github.com/khwilson">Kevin Hayes Wilson</a>.
+      County election data compiled by <a href="https://electionlab.mit.edu/data">MIT Election Data + Science Lab</a>.
+      Original project was done by Kevin Hayes Wilson. Check out his code on <a href="https://github.com/khwilson/RedrawStates">GitHub</a>.
+      This non-commercial project adds election data for 2000, 2004, and 2008, as well as updating results for 2012 and 2016.
     </div>
   </div>
-   -->
 </div>
 
 <script src="js/d3.v3.min.js"></script>
